kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: frontend
  name: frontend
spec:
  rules:
  - host: shop.34.67.230.199.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - shop.34.67.230.199.nip.io
    secretName: shop.34.67.230.199.nip.io
